gitops/core/envoy-gateway-config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: oracle-lb
    namespace: envoy-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      hostname: "*.menghi.uy"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-menghi.uy-tls-cert
    - name: elasticsearch
      hostname: "elk.menghi.uy"
      protocol: HTTPS
      port: 9200
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-menghi.uy-tls-cert
    - name: fleet-server
      hostname: "elk.menghi.uy"
      protocol: HTTPS
      port: 8220
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-menghi.uy-tls-cert
